<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtbl_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="center"
            app:title="@string/simplehabitstarter"
            app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
            app:expandedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_session_image"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:foreground="@android:drawable/screen_background_dark_transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/morningmeditate" />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:text="@string/simplehabitstarter"-->
                    <!--android:textColor="@color/whiteAll"-->
                    <!--android:textSize="@dimen/font_big"-->
                    <!--android:textStyle="bold"/>-->

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorPrimaryDark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/whiteAll"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginTop="@dimen/margin_large2"
                    android:layout_marginLeft="@dimen/margin_medium1"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_large2"
                    android:layout_marginRight="@dimen/margin_medium1"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium1"
                    android:text="This is sample description"
                    android:textColor="@color/whiteReduce" />

                <TextView
                    android:id="@+id/tv_detail_readmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/readmore"
                    android:textColor="@color/colorCardBg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_readmore"
                    android:layout_margin="@dimen/margin_medium1"
                    android:text="@string/sessions"
                    android:textColor="@color/whiteAll" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_sessions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium1"
        android:src="@drawable/ic_play_arrow_white_24dp"
        app:backgroundTint="@color/colorCardBg"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>